<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ubclaunchpad.calculator.CalculatorActivity"
    android:background="@drawable/chalkboard"
    >

    <LinearLayout
        android:id="@+id/SimpleCalcLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp">
        <EditText
            android:id="@+id/firstInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_input"
            android:inputType="numberDecimal"
            android:gravity="center"/>
        <LinearLayout
            android:id="@+id/operationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/operation_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"/>
            <Button
                android:id="@+id/operation_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"/>
            <Button
                android:id="@+id/operation_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"/>
            <Button
                android:id="@+id/operation_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"/>
        </LinearLayout>

        <EditText
            android:id="@+id/secondInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/second_input"
            android:inputType="numberDecimal"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/extraFnText"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_functions"
        android:layout_below="@+id/SimpleCalcLayout"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/extraFunctionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/extraFnText"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/operation_extra1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/func1"/>
        <Button
            android:id="@+id/operation_extra2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/func2"/>
        <Button
            android:id="@+id/operation_extra3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/func3"/>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/extraFunctionsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/instructions"
        android:textStyle="bold"/>

</RelativeLayout>
